force-app/main/default/objects/Fare_Structure__c/Fare_Structure__c.object-meta.xml
<CustomObject>
    <description>Custom object to replace standard Product object</description>
    <label>Fare</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Booking Class</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fares</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>