force-app/main/default/objects/Fare_Structure__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Mainline</fullName>
            </value>
            <value>
                <fullName>Intra WA</fullName>
            </value>
            <value>
                <fullName>ASIA4</fullName>
            </value>
            <value>
                <fullName>Prop 1</fullName>
            </value>
            <value>
                <fullName>Prop 2</fullName>
            </value>
            <value>
                <fullName>Prop 3</fullName>
            </value>
            <value>
                <fullName>Prop 4</fullName>
            </value>
            <value>
                <fullName>Route</fullName>
            </value>
            <value>
                <fullName>NAM1/NAM2</fullName>
            </value>
            <value>
                <fullName>ASIA2/ASIA3</fullName>
            </value>
            <value>
                <fullName>EUR1/EUR2/EUR3</fullName>
            </value>
            <value>
                <fullName>MEA1</fullName>
            </value>
            <value>
                <fullName>AFR3</fullName>
            </value>
            <value>
                <fullName>ASIA1</fullName>
            </value>
            <value>
                <fullName>ASIA1/ASIA2/ASIA3</fullName>
            </value>
            <value>
                <fullName>ASIA1/ASIA3</fullName>
            </value>
            <value>
                <fullName>NZ1</fullName>
            </value>
            <value>
                <fullName>NA/AFR1/AFR2/SA/ASIA</fullName>
            </value>
            <value>
                <fullName>NZ</fullName>
            </value>
            <value>
                <fullName>ASIA2</fullName>
            </value>
            <value>
                <fullName>Propeller</fullName>
            </value>
            <value>
                <fullName>ASIA</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>All markets</fullName>
            </value>
            <value>
                <fullName>ASIA1/ASIA2</fullName>
            </value>
            <value>
                <fullName>ASIA3</fullName>
            </value>
            <value>
                <fullName>NAM</fullName>
            </value>
            <value>
                <fullName>SAM</fullName>
            </value>
            <value>
                <fullName>AFR1</fullName>
            </value>
            <value>
                <fullName>AFR2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>