force-app/main/default/objects/Fare_Structure__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Destination</label>
    <length>5</length>
    <type>Text</type>
</CustomField>