force-app/main/default/objects/Fare_Structure__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <label>Network</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Non-MCA</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>MCA &amp; Non-MCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>