force-app/main/default/objects/Fare_Structure__c/fields/Prod_Code_RededealQ__c.field-meta.xml
<CustomField>
    <fullName>Prod_Code_RededealQ__c</fullName>
    <description>The value of this field has been referenced in QBS(Custom setting)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Prod Code RededealQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>