force-app/main/default/objects/Fare_Structure__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>