force-app/main/default/objects/Fare_Structure__c/fields/Qantas_Published_Airfare__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Published_Airfare__c</fullName>
    <label>Qantas Published Airfare</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JBUS</fullName>
            </value>
            <value>
                <fullName>CBUS</fullName>
            </value>
            <value>
                <fullName>DBUS</fullName>
            </value>
            <value>
                <fullName>YQFLEX</fullName>
            </value>
            <value>
                <fullName>BQFLEX</fullName>
            </value>
            <value>
                <fullName>HQFLEX</fullName>
            </value>
            <value>
                <fullName>KQFLEX</fullName>
            </value>
            <value>
                <fullName>MDEAL</fullName>
            </value>
            <value>
                <fullName>LDEAL</fullName>
            </value>
            <value>
                <fullName>VDEAL</fullName>
            </value>
            <value>
                <fullName>SDEAL</fullName>
            </value>
            <value>
                <fullName>NDEAL</fullName>
            </value>
            <value>
                <fullName>QDEAL</fullName>
            </value>
            <value>
                <fullName>F~</fullName>
            </value>
            <value>
                <fullName>A~</fullName>
            </value>
            <value>
                <fullName>J~</fullName>
            </value>
            <value>
                <fullName>C~</fullName>
            </value>
            <value>
                <fullName>D~</fullName>
            </value>
            <value>
                <fullName>I~</fullName>
            </value>
            <value>
                <fullName>W~</fullName>
            </value>
            <value>
                <fullName>R~</fullName>
            </value>
            <value>
                <fullName>Y~</fullName>
            </value>
            <value>
                <fullName>B~</fullName>
            </value>
            <value>
                <fullName>H~</fullName>
            </value>
            <value>
                <fullName>K~</fullName>
            </value>
            <value>
                <fullName>M~</fullName>
            </value>
            <value>
                <fullName>L~</fullName>
            </value>
            <value>
                <fullName>S~</fullName>
            </value>
            <value>
                <fullName>N~</fullName>
            </value>
            <value>
                <fullName>Q~</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>