force-app/main/default/objects/Fare_Structure__c/fields/QL_QF_EK__c.field-meta.xml
<CustomField>
    <fullName>QL_QF_EK__c</fullName>
    <description>Indicates whether the fare belongs to QF or EK (CRM-5329)</description>
    <label>QF/EK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QF-EK</fullName>
            </value>
            <value>
                <fullName>QF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>