force-app/main/default/objects/Fare_Structure__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Route</label>
    <length>8</length>
    <type>Text</type>
</CustomField>