force-app/main/default/objects/Fare_Structure__c/listViews/All_1.listView-meta.xml
<ListView>
    <fullName>All_1</fullName>
    <columns>NAME</columns>
    <columns>Market__c</columns>
    <columns>ProductCode__c</columns>
    <columns>Category__c</columns>
    <columns>Cabin__c</columns>
    <columns>Network__c</columns>
    <columns>Segment__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>