force-app/main/default/objects/Fare_Structure__c/listViews/ClassY.listView-meta.xml
<ListView>
    <fullName>ClassY</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Cabin__c</columns>
    <columns>Category__c</columns>
    <columns>ProductCode__c</columns>
    <columns>Network__c</columns>
    <columns>Market__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Y</value>
    </filters>
    <label>ClassY</label>
</ListView>