force-app/main/default/objects/Fare_Structure__c/listViews/MCA_Active.listView-meta.xml
<ListView>
    <fullName>MCA_Active</fullName>
    <columns>NAME</columns>
    <columns>Market__c</columns>
    <columns>ProductCode__c</columns>
    <columns>Category__c</columns>
    <columns>Cabin__c</columns>
    <columns>Network__c</columns>
    <columns>Segment__c</columns>
    <columns>QL_QF_EK__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Segment__c</field>
        <operation>equals</operation>
        <value>International</value>
    </filters>
    <filters>
        <field>Network__c</field>
        <operation>equals</operation>
        <value>MCA</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>MCA - Active</label>
</ListView>