force-app/main/default/objects/Fare_Structure__c/listViews/Non_MCA.listView-meta.xml
<ListView>
    <fullName>Non_MCA</fullName>
    <columns>NAME</columns>
    <columns>Market__c</columns>
    <columns>ProductCode__c</columns>
    <columns>Category__c</columns>
    <columns>Cabin__c</columns>
    <columns>Network__c</columns>
    <columns>Segment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Segment__c</field>
        <operation>equals</operation>
        <value>International</value>
    </filters>
    <filters>
        <field>Network__c</field>
        <operation>equals</operation>
        <value>Non-MCA</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Non MCA</label>
    <language>en_US</language>
</ListView>